<?xml version="1.0"?>
<package format="2">
  <name>urdf_utilities</name>
  <version>0.2.2</version>
  <description>Extract kinematic value of a vehicle from urdf</description>

  <maintainer email="vincent.rousseau@irstea.fr">Vincent Rousseau</maintainer>

  <license>BSD</license>

  <author email="vincent.rousseau@irstea.fr">Vincent Rousseau</author>

  <url type="website">http://ros.org/wiki/urdf_utilities</url>
  <url type="repository">https://github.com/ros-controls/urdf_utilities.git</url>
  <url type="bugtracker">https://github.com/ros-controls/urdf_utilities/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>urdf</depend>
  <depend>tf2</depend>

</package>
